<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="accountViewModel"
            type="be.ardu.scoutsardu.viewmodels.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/errorMessage"
            style="@style/errorMessage"
            android:text="@string/er_liep_iets_fout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/voornaamText"
            style="@style/standaardText"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="@dimen/paddingEditFieldLabels"
            android:paddingEnd="@dimen/paddingEditFieldLabels"
            android:text="@string/voornaam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorMessage" />


        <EditText
            android:id="@+id/voornaamInput"
            style="@style/defaultInputFieldNaam"
            android:hint="@string/voornaamHint"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voornaamText" />

        <TextView
            android:id="@+id/achternaamText"
            style="@style/standaardText"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="@dimen/paddingEditFieldLabels"
            android:paddingEnd="@dimen/paddingEditFieldLabels"
            android:text="@string/achternaam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voornaamInput" />


        <EditText
            android:id="@+id/achternaamInput"
            style="@style/defaultInputFieldNaam"
            android:hint="@string/achternaamHint"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achternaamText" />


        <TextView
            android:id="@+id/telefoonNummerText"
            style="@style/standaardText"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="@dimen/paddingEditFieldLabels"
            android:paddingEnd="@dimen/paddingEditFieldLabels"
            android:text="@string/telefoonnummer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/achternaamInput" />


        <EditText
            android:id="@+id/telefoonNummerInput"
            style="@style/defaultInputFieldTelefoon"
            android:hint="@string/telefoonHint"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoonNummerText" />


        <Button
            android:id="@+id/wijzigingenOpslaan"
            style="@style/defaultButtonColored"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/wijzigingen_opslaan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoonNummerInput" />

        <Button
            android:id="@+id/uitloggen"
            style="@style/defaultButtonRed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/uitloggen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>